--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.2.0",
+    "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.6",
+    "jalaliday": "^2.3.0",
+    "num2persian": "^3.2.2",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
